--- a/package.json
+++ b/package.json
@@ -7,21 +7,20 @@
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
     "react": "^17.0.1",
+    "react-admin": "^3.10.2",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "lint": "xo",
+    "precommit": "lint-staged",
+    "release": "standard-version",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
@@ -33,6 +32,64 @@
       "last 1 chrome version",
       "last 1 firefox version",
       "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-react": "^7.21.5",
+    "husky": "^4.3.0",
+    "lint-staged": "^10.5.1",
+    "prettier": "^2.2.0",
+    "ra-data-fakerest": "^3.9.3",
+    "standard-version": "^9.0.0",
+    "xo": "^0.35.0"
+  },
+  "lint-staged": {
+    "*.js": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "prettier": {
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
+  "xo": {
+    "extends": [
+      "prettier",
+      "plugin:react/recommended"
+    ],
+    "ignore": [
+      "src/serviceWorker.js"
+    ],
+    "rules": {
+      "capitalized-comments": "off",
+      "import/no-unassigned-import": [
+        "error",
+        {
+          "allow": [
+            "**/*.css"
+          ]
+        }
+      ],
+      "unicorn/catch-error-name": "off",
+      "unicorn/explicit-length-check": "off",
+      "unicorn/filename-case": "off"
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/*.test.js",
+          "**/__mocks__/*.js"
+        ],
+        "env": "jest"
+      },
+      {
+        "files": [
+          "src/**/*.js"
+        ],
+        "env": "browser"
+      }
     ]
   }
 }
