--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "@thedistance/the-core-cms-module-authentication-amplify": "git+ssh://git@bitbucket.org/thedistance/the-core-cms-module-authentication-amplify.git",
+    "amazon-cognito-identity-js": "^4.5.5",
+    "apollo-cache-inmemory": "^1.6.6",
+    "apollo-client": "^2.6.10",
+    "apollo-link-context": "^1.0.20",
+    "apollo-link-http": "^1.5.17",
+    "aws-amplify": "^3.3.9",
+    "ra-data-graphql-simple": "^3.10.2",
     "react": "^17.0.1",
     "react-admin": "^3.10.2",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "recompose": "^0.30.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
