--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-link-context": "^1.0.20",
     "apollo-link-http": "^1.5.17",
     "aws-amplify": "^3.3.9",
+    "emoji-dictionary": "^1.0.11",
     "ra-data-graphql-simple": "^3.10.2",
     "ra-input-rich-text": "^3.10.1",
     "react": "^17.0.1",
