--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
-    "@thedistance/the-core-cms-module-authentication-amplify": "git+ssh://git@bitbucket.org/thedistance/the-core-cms-module-authentication-amplify.git",
+    "@thedistance/the-core-cms-module-authentication-amplify": "git+ssh://git@bitbucket.org/thedistance/the-core-cms-module-authentication-amplify.git#latest",
     "amazon-cognito-identity-js": "^4.5.5",
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
@@ -21,7 +21,6 @@
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
-    "recompose": "^0.30.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
