--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "apollo-link-http": "^1.5.17",
     "aws-amplify": "^3.3.9",
     "emoji-dictionary": "^1.0.11",
+    "lodash.clonedeep": "^4.5.0",
     "ra-data-graphql-simple": "^3.10.2",
     "ra-input-rich-text": "^3.10.1",
     "react": "^17.0.1",
