--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "apollo-cache-inmemory": "^1.6.6",
     "apollo-client": "^2.6.10",
     "apollo-link-context": "^1.0.20",
+    "apollo-link-error": "^1.1.13",
     "apollo-link-http": "^1.5.17",
     "aws-amplify": "^3.3.9",
     "emoji-dictionary": "^1.0.11",
